--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ opencv-python==4.5.1.48
 pandas==1.1.2
 psycopg2==2.8.6
 pydantic==1.7.2
+pymongo==3.11.3
 pyTelegramBotAPI==3.7.2
 scipy==1.4.1
 SpeechRecognition==3.8.1
