--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pandas==1.1.2
 psycopg2==2.8.6
 pydantic==1.7.2
 pyTelegramBotAPI==3.7.2
+python-dateutil
 scipy==1.4.1
 SpeechRecognition==3.8.1
 Unidecode==1.1.1
